# CloakBrowser-Manager

./: .gitignore  DEVELOPMENT.md  PACKAGING.md  README.md  pyproject.toml  run_desktop.py
.github/workflows/: release.yml
backend/: browser_manager.py  database.py  desktop.py  frozen_runtime.py  main.py  models.py  paths.py  updater.py  version.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_browser_manager.py  test_models.py  test_update.py  test_version.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: LaunchButton.tsx  LoginPage.tsx  NativeWindowPanel.tsx  ProfileForm.tsx  ProfileList.tsx  UpdateButton.tsx
frontend/src/hooks/: useProfiles.test.ts  useProfiles.ts
frontend/src/lib/: api.test.ts  api.ts
packaging/: cloakbrowser-manager.spec  macos-install.command  macos-launch.command  pyi_rthook_pkgpath.py  requirements-desktop.txt
packaging/windows/: installer.iss
scripts/: build-macos.sh  build-windows.ps1  build.sh  codesign-macos-app.sh  notarize-macos-dmg.sh  notarize-macos-zip.sh
