[project]
name = "cloakbrowser-manager"
version = "0.1.0"
description = "Browser profile manager for CloakBrowser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "cloakbrowser[geoip]>=0.3.31",
    "websockets>=14.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.3"]
build = ["pyinstaller>=6.6", "pywebview>=5.3"]

[project.scripts]
cloakbrowser-manager = "backend.desktop:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
